--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', { title: 'Welcome', user: null }) %>
+<%- include('partials/header', { title: 'Welcome', user: null, hideHeader: true }) %>
 <section class="card intro-card">
   <div id="intro-phase-1" class="intro-text"></div>
   <div id="intro-phase-2" class="intro-text hidden">
