--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', { title: 'Sorting Hat', user: null }) %>
+<%- include('partials/header', { title: 'Sorting Hat', user: null, hideHeader: true }) %>
 <section class="card sorting-flow-card">
   <% if (error) { %>
     <div class="error"><%= error %></div>
