--- a/views/gate.ejs
+++ b/views/gate.ejs
@@ -25,7 +25,7 @@
 
         <% if (item.type === 'puzzle') { %>
           <% if (item.unlocked) { %>
-            <a href="/play?puzzle_id=<%= item.id %>" class="puzzle-link">
+            <a href="/puzzle/<%= item.id %>" class="puzzle-link">
               <span>G<%= item.groupIndex %> • <%= item.order_index %>. <%= item.title %></span>
               <span class="status"><%= item.solved ? 'Solved' : 'Open' %></span>
             </a>
