--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -9,5 +9,6 @@
   </div>
   <a id="intro-continue" class="btn hidden" href="/login">Continue</a>
 </section>
+<div id="intro-blackout" class="intro-blackout"></div>
 <script src="/intro.js" defer></script>
 <%- include('partials/footer') %>
