--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
     </main>
     <footer class="site-footer">
-      <span>Built for a four-house challenge.</span>
+      <span>assume nothing. examine everything.</span>
     </footer>
   </body>
 </html>
