--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,6 +3,7 @@
   <div class="landing-actions">
     <a class="btn landing-btn" href="/begin">Begin</a>
     <a class="btn landing-btn" href="/return">Return</a>
+    <div class="landing-tagline">assume nothing. examine everything.</div>
   </div>
 </section>
 <%- include('partials/footer') %>
